--- a/MonkeyAllianceBot/MonkeyAllianceBot.csproj
+++ b/MonkeyAllianceBot/MonkeyAllianceBot.csproj
@@ -12,6 +12,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Config\appsettings_debug.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Config\appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
